--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
