--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@types/node": "^18.15.11",
     "autoprefixer": "^10.4.14",
+    "classnames": "^2.3.2",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-select": "^5.7.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.1",
     "vite-plugin-svgr": "^2.4.0"
