--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,9 @@
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-select": "^5.7.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.1",
     "vite-plugin-svgr": "^2.4.0"
