--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-datepicker": "^4.11.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "tailwind-scrollbar-hide": "^1.1.7",
