--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: yarn && yarn build
+      - run: cd frontend && yarn && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           entryPoint: ./frontend
